# SKU_find_app

./: .gitignore  DIALOG_HANDOFF_FOR_CLAUDE.md  HANDOFF.md  README.md  utake_products_catalog.docx
backend/: pyproject.toml
backend/src/sku_audit/: __init__.py  app.py  catalog.py  cli.py  docx_catalog.py  jobs.py  media.py  models.py  pipeline.py  reporting.py  sku_count.py
backend/tests/: test_app.py  test_docx_catalog.py  test_jobs.py  test_pipeline.py
docs/: accesses.md  android-target.md  annotation-guide.md  backend-pipeline.md  data-status.md  detector-v8-workflow.md  ml-training.md  mvp.md  overnight-improve.md  product-guard.md  tablet-live-feedback.md  video-audit-pipeline.md
ml/: README.md  add_device_negatives.py  add_negatives.py  add_training_photos.py  add_v8_hard_negatives.py  apply_manual_overrides.py  audit_video.py  auto_label_dataset.py  build_product_dataset.py  build_product_guard_dataset.py  build_reference_cls_dataset.py  build_reference_index.py  classes.json  coco_negatives.py  combine_reports.py  convert_labelstudio_to_yolo.py  evaluate_audit_counts.py  evaluate_detector_counts.py  evaluate_sku_coverage.py  expand_dataset_with_video.py  export_product_guard_tflite.py  export_tflite.py  export_yolo.py  fastsam_label.py  hf_negatives.py  hf_retail_positives.py  infer_yolo.py  label_studio_config.xml  label_studio_product_config.xml  make_labeling_tool.py  manual_overrides.json  mine_product_guard_crops.py  overnight_improve.py  prepare_dataset.py  prepare_product_review_dataset.py  reid_merge.py  requirements.txt  serve_dataset.py  (+6 more)
(+51 files in other folders)
