[project]
name = "sku-audit-backend"
version = "0.1.0"
description = "Backend prototype for video/image-based SKU audit."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "numpy>=2.0",
  "pillow>=10.0",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
